# scrabble-solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  install-dev-env.ps1  install-gtest.ps1  vcpkg-configuration.json
.agent/rules/: start.md
.cursor/rules/: agent.mdc  coding-standards.mdc  communication.mdc  debug.mdc  development-environment.mdc  language-policy.mdc  repository-maintenance.mdc  require-unit-tests-engine.mdc  start.mdc
assets/benchmarks/: synthetic_positions.txt
assets/dev/: rules.md
results/: bench_ours.txt  bench_ours_dedup.txt  bench_quackle.txt  bench_quackle_debug.txt
scripts/: generate_positions.py
src/bench/: bench.cpp  convert_gaddag.cpp  quackle_bench.cpp
src/engine/: Gaddag.cpp  Gaddag.h  MoveGenerator.cpp  MoveGenerator.h  engine.c  engine.cpp  engine.h
tests/: simple_test.cpp  test_gaddag.cpp  test_main.c  test_main.cpp  test_move_generator.cpp
